--- a/termos.html
+++ b/termos.html
@@ -7,6 +7,7 @@
   <title>Termos e Condições | Bickcraft</title>
   <meta name="description" content="Termos e Condições">
 
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +18,7 @@
 <body id="termos">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="./img/bikcraft.svg" alt="Bickcraft"></a>
+      <a href="./"><img src="./img/bikcraft.svg" width="136" height="32" alt="Bickcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -51,7 +52,7 @@
   </main>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-l-m cor-5">
@@ -61,9 +62,9 @@
           <li>Rio de Janeiro - RJ</li>
         </ul>
         <div class="footer-redes">
-          <a href="./"><img src="./img/redes/instagram.svg" alt="Instagram"></a>
-          <a href="./"><img src="./img/redes/facebook.svg" alt="Facebook"></a>
-          <a href="./"><img src="./img/redes/youtube.svg" alt="Youtube"></a>
+          <a href="./"><img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram"></a>
+          <a href="./"><img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook"></a>
+          <a href="./"><img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube"></a>
         </div>
       </div>
       <div class="footer-informacoes">
