--- a/bicicletas.html
+++ b/bicicletas.html
@@ -21,7 +21,7 @@
       <a href="./"><img src="./img/bikcraft.svg" width="136" height="32" alt="Bickcraft"></a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
-          <li><a href="./bicicletas.hmtl">Bicicletas</a></li>
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
         </ul>
@@ -110,7 +110,7 @@
         <h3 class="font-2-l-b cor-0">Informações</h3>
         <nav>
           <ul class="font-2-l-m cor-5">
-            <li><a href="./bicicletas.hmtl">Bicicletas</a></li>
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
             <li><a href="./seguros.html">Seguros</a></li>
             <li><a href="./contato.html">Contato</a></li>
             <li><a href="./termos.html">Termos e Condições</a></li>
@@ -120,6 +120,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
