--- a/contato.html
+++ b/contato.html
@@ -131,7 +131,7 @@
         <h3 class="font-2-l-b cor-0">Informações</h3>
         <nav>
           <ul class="font-2-l-m cor-5">
-            <li><a href="./bicicletas.hmtl">Bicicletas</a></li>
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
             <li><a href="./seguros.html">Seguros</a></li>
             <li><a href="./contato.html">Contato</a></li>
             <li><a href="./termos.html">Termos e Condições</a></li>
@@ -141,6 +141,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
