--- a/seguros.html
+++ b/seguros.html
@@ -153,7 +153,7 @@
         <h3 class="font-2-l-b cor-0">Informações</h3>
         <nav>
           <ul class="font-2-l-m cor-5">
-            <li><a href="./bicicletas.hmtl">Bicicletas</a></li>
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
             <li><a href="./seguros.html">Seguros</a></li>
             <li><a href="./contato.html">Contato</a></li>
             <li><a href="./termos.html">Termos e Condições</a></li>
@@ -163,6 +163,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 <!--Perguntas frequentes é um tipo de layout que a gente pode definir com uma lista de definição, a dl que eu mostrei para vocês. A dl recebe dt,que seria o termo que você está definindo, no nosso caso a pergunta. E dd, que é a definição desse termo. Sempre nessa ordem. Uma forma que você pode colocar também, é colocar div dentro. Ele aceita, o HTML5 aceita div, contanto que a div sempre tenha um dt e um dd relacionado a ela.-->
 
